# IDet

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  README.md  meson.build  meson_options.txt
assets/models/dbnet/: dbnet_resnet18_fpnc_1200e_icdar2015.onnx
assets/models/paddleocr/: ch_ppocr_mobile_slim_v2_det.onnx  ch_ppocr_mobile_v2_det.onnx  ch_ppocr_server_v2_det.onnx  ch_ppocr_v2_det.onnx
docs/config/doxygen/: Doxyfile  groups.dox
docs/jtd/: _config.yml  index.md
include/idet/: export.h  idet.h  image.h  status.h
include/tdet/: cli.h  cross_topology.h  dbnet.h  detector.h  drawing.h  export.h  face_detector.h  geometry.h  nms.h  omp_config.h  opencv_headers.h  ort_headers.h  progress_bar.h  run_bench.h  run_face.h  run_single.h  tdet.h  tiling.h  timer.h
include/tdet/run/: run_bench.h  run_common.h  run_face.h  run_single.h
include/yuvv/: export.h  yuv_viewer.h  yuvv.h
models/dbnet/: dbnet_resnet18_fpnc_1200e_totaltext.onnx
models/paddleocr/: ch_ppocr_v3_det.onnx
scripts/: build.sh  build_docs.sh  clang_static_analyzer.sh  format_code.sh  include_cleaner.sh  run.sh  run_idet_face.sh  run_idet_text.sh  run_tests.sh  run_yuvv.sh  view_yuv.sh
scripts/docs/: build_doxygen.sh  build_jtd.sh  common.sh
src/: meson.build
src/app/: meson.build  tdet_app.cpp  yuvv_app.cpp
src/app/idet/: bench.h  cli.cpp  cli.h  io.cpp  io.h  main.cpp  meson.build  printer.h  progress_bar.h
src/app/tdet/: main.cpp  meson.build
src/app/yuvv/: cli.cpp  cli.h  main.cpp  meson.build
src/lib/: meson.build
src/lib/idet/: idet.cpp  image.cpp  meson.build
src/lib/idet/algo/: geometry.cpp  geometry.h  meson.build  nms.cpp  nms.h  tiling.cpp  tiling.h
src/lib/idet/engine/: dbnet.cpp  dbnet.h  engine.cpp  engine.h  engine_factory.cpp  engine_factory.h  meson.build  scrfd.cpp  scrfd.h
src/lib/idet/internal/: chw_preprocess.h  cv_bgr.h  embed_model.h  opencv_headers.h  ort_headers.h  ort_tensor.h
src/lib/idet/platform/: cross_topology.cpp  cross_topology.h  meson.build  omp_config.cpp  omp_config.h  runtime_policy_setup.cpp  runtime_policy_setup.h
src/lib/tdet/: cli.cpp  cross_topology.cpp  dbnet.cpp  drawing.cpp  face_detector.cpp  geometry.cpp  meson.build  omp_config.cpp  run.cpp  run_bench.cpp  run_common.cpp  run_face.cpp  run_single.cpp  tdet.cpp  tiling.cpp
src/lib/tdet/internal/: model_blob_factory.h  progress_bar.h
src/lib/yuvv/: meson.build  yuv_viewer.cpp  yuvv.cpp
src/tdet/: cross_topology.cpp  dbnet.cpp  geometry.cpp  meson.build  nms.cpp  omp_config.cpp  run_bench.cpp  run_single.cpp  tiling.cpp
subprojects/: clipper2.wrap  gtest.wrap  indicators.wrap  onnxruntime.wrap  stb.wrap
subprojects/packagefiles/clipper2/: meson.build
subprojects/packagefiles/gtest/: meson.build
subprojects/packagefiles/indicators/: meson.build
subprojects/packagefiles/onnxruntime/: meson.build  meson_options.txt  meson_ort_build.py
subprojects/packagefiles/stb/: meson.build
tests/: meson.build
tests/unit/: main.cpp  meson.build  test_geometry.cpp  test_nms.cpp  test_ort_tensor.cpp  test_tiling.cpp
toolchain/: activate.sh  tc.sh
toolchain/env/: defaults.env
toolchain/profiles/clang-debug/: meson_opt.ini  profile.ini
toolchain/profiles/clang-perf/: meson_opt.ini  profile.ini
toolchain/profiles/clang-release/: profile.ini
toolchain/profiles/gcc-debug/: profile.ini
toolchain/profiles/gcc-perf/: meson_opt.ini  profile.ini
toolchain/profiles/gcc-release/: meson_opt.ini  profile.ini
toolchain/scripts/: activate.sh  tc.sh
tools/: bin_to_cpp.py  check_ml_ops.py  grid_search.py  parse_bench.py  quantize_model.py
videos/: test.yuv
